welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:2: error: value lenght is not a member of Array[Int]
  var A:Int=nums.lenght
                 ^averageValue:7: error: not found: value n
  return n/A
         ^