welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var A:Int=nums.lenght
  
  for (n<-0 to nums.length-1){
    nums(n)=nums(n)+nums(n-1)
  }
  return n/A
}